Fix: remove invalid clear_output from requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
 voila
 notebook
-display
-clear_output
-HTML
+IPython.display
 ipywidgets
 time
 random
 datetime
-Thread
-deque
-defaultdict
+threading
+collections
 pandas
 numpy
-GradientBoostingRegressor
-MinMaxScaler
+sklearn.ensemble
+sklearn.preprocessing
